--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RoboTalker - Text to Speech</title>
+    <title>Pronunciation practicer</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>RoboTalker</h1>
+        <h1>Pronunciation practicer</h1>
         <input type='text' id='thing' placeholder="Type something to speak">
         <button onclick="TalkingBot.speak();">Speak</button>
     </div>
