--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <input type='text' id='thing' placeholder="Type something to speak">
         <button onclick="TalkingBot.speak();">Speak</button>
     </div>
-
+    <a href="http://s01.flagcounter.com/more/YDX"><img src="https://s01.flagcounter.com/count/YDX/bg_FFFFFF/txt_000000/border_CCCCCC/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
     <script>
     const TalkingBot = {
         name: 'RoboTalker',
